--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "bytes": "^3.1.2",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
